# neobotnet_scan_mvp

./: .env.dev  .gitignore  .npmrc  README.md  dev  docker-compose.yml  schema.sql
.github/workflows/: README.md  deploy-backend-optimized-improved.yml  deploy-lean.yml
backend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  requirements.txt  setup.py
backend/app/: __init__.py  main.py
backend/migrations/: 001_add_user_tiers.sql  002_remove_pending_payment_functions.sql
backend/scripts/: environment-diagnostics.py  redis-health-check.py
backend/tests/: test_api_documentation.py  test_auth.py  test_batch_optimizer.py  test_dnsx_module_integration.py  test_dnsx_schemas.py  test_module_registry.py  test_multi_tenant_system.py  test_redis_streams_basic.py  test_scan_validation.py
bbscopes/: atlassian.txt  audible.txt  bitdefender.txt  bolt.txt  capitalone.txt  chime.txt  etsy.txt  hilton.txt  hubspot.txt  indrive.txt  malwarebytes.txt  mercadolibre.txt  mgm_macau.txt  netflix.txt  programs.md  ring.txt  robinhood.txt  skyscanner.txt  square.txt  trip.txt  united.txt  urls.txt  varonis.txt  wise.txt
cli/: README.md  pyproject.toml
cli/neobotnet/: __init__.py  config.py  main.py
cli/neobotnet/commands/: programs.py  scan.py
cli/orchestrator/: Dockerfile  main.py  requirements.txt
database/: 004_missing_functions_and_views.sql
docs/: test_scan.sh
frontend/: Dockerfile.dev  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json
infrastructure/: README.md
neobot-cli/: README.md  install.sh  neobot  neobotnet
testing/: README.md
(+310 files in other folders)
