[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neobotnet-cli"
version = "1.0.0"
description = "NeoBot-Net CLI - Operator reconnaissance scanner"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "NeoBot-Net Team" }
]
keywords = ["security", "reconnaissance", "bug-bounty", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "boto3>=1.34.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
neobotnet = "neobotnet.main:main"

[project.urls]
Repository = "https://github.com/your-org/neobotnet"

[tool.hatch.build.targets.wheel]
packages = ["neobotnet"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

